<?xml version="1.0"?>
<package format="3">
  <name>trav_cost_filters</name>
  <version>0.1.0</version>
  <description>grid_map filter-chain runner + GridMap→OccupancyGrid adapter for Nav2 + CFPA2 in 3D-frontier-exploration.</description>
  <maintainer email="zhuhanshan12@outlook.com">Hanshang Zhu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ deps for filter_chain_runner -->
  <depend>rclcpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_filters</depend>
  <depend>filters</depend>

  <!-- C++ deps for grid_map_to_occupancy_grid_cpp -->
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Python deps for grid_map_to_occupancy_grid adapter (Python fallback) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Runtime deps -->
  <exec_depend>elevation_mapping_cupy</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
